refactor(core): make `populatePluginUrlList` method package-private and replace regex constants in version comparison
Signed-off-by: Hiroshi Miura <miurahr@linux.com>